--- a/index.html
+++ b/index.html
@@ -28,43 +28,36 @@
 
         <header>
 
-            <h1>Your Name</h1>
-            <h2>My Github Homepage</h2>
+            <h1>Dea Burlew</h1>
+            <h2>My Github Homepage that I forked from Professor Mead</h2>
 
         </header>
 
         <main>
             <article id="about">
                 <h1>About Me</h1>
-                <p><img src="images/photo.png" alt="photo" class="alignleft">Veggies es bonus vobis, proinde vos postulo
-                    essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. </p>
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava
-                    bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko
-                    zucchini. </p>
-                <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach
-                    avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin
-                    horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean
-                    swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
+                <p><img src="images/photo.png" alt="photo" class="alignleft">Shoot me an email can I just chime in on that one, so vertical integration wheelhouse. Quick-win even dead cats bounce. That ipo will be a game-changer if you could do that, that would be great, and we need to build it so that it scales, for execute , so ultimate measure of success, run it up the flagpole, ping the boss and circle back. Low-hanging fruit feed the algorithm, and critical mass introduccion game-plan. Let me know if you need me to crack any skulls. We have put the apim bol, temporarily so that we can later put the monitors on. A set of certitudes based on deductions founded on false premise knowledge is power throughput, or creativity requires you to murder your children what about scaling components to a global audience? </p>
+                <p>Hit the ground running i dont care if you got some copy, why you dont use officeipsumcom or something like that ? quantity keep it lean let's circle back tomorrow. Out of scope powerpoint Bunny we have put the apim bol, temporarily so that we can later put the monitors on bench mark. Dogpile that circle back my grasp on reality right now is tenuous enough to wash your face they have downloaded gmail and seems to be working for now both the angel on my left shoulder and the devil on my right are eager to go to the next board meeting and say weâ€™re ditching the business model, for incentivization. </p>
+                <p>A tentative event rundown is attached for your reference, including other happenings on the day you are most welcome to join us beforehand for a light lunch we would also like to invite you to other activities on the day, including the interim and closing panel discussions on the intersection of businesses and social innovation, and on building a stronger social innovation eco-system respectively parallel path, so what about scaling components to a global audience?. Churning anomalies value prop, pre launch we're ahead of the curve on that one value-added do i have consent to record this meeting. </p>
             </article>
 
             <article id="projects">
                 <h2>My Projects</h2>
                 <ol>
+                    <li>Here is nothing</li>
                     <li>Here is an important project</li>
-                    <li>Here is an important project</li>
-                    <li>Here is an important project</li>
-                    <li>Here is an important project</li>
-                    <li>Here is an important project</li>
+                    <li>Here lies a dead site</li>
+                    <li>Here is a very merry Christmas</li>
+                    <li>Here is an unimportant project</li>
                 </ol>
 
                 <h2>My Skills</h2>
-                <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery
-                    bitterleaf wattle seed collard greens nori.</p>
+                <p>laughing</p>
                 <ul>
-                    <li>Special Skill</li>
-                    <li>Special Skill</li>
-                    <li>Special Skill</li>
-                    <li>Special Skill</li>
+                    <li>jumping</li>
+                    <li>cart wheels</li>
+                    <li>skipping</li>
+                    <li>Running</li>
                 </ul>
             </article>
 
@@ -73,7 +66,7 @@
         <footer>
             <h1>Ways to contact me</h1>
             <p><strong>Phone</strong> 111.222.3333 <br>
-                <strong>Email</strong> email@somewhere.com <br>
+                <strong>Email</strong> emaildea@somewhere.com <br>
                 <strong>Website</strong> <a href="http://somewhere.com">http://somewhere.com</a>
             </p>
         </footer>
